--- a/UI.fxml
+++ b/UI.fxml
@@ -14,12 +14,12 @@
    <children>
       <AnchorPane prefHeight="130.0" prefWidth="1280.0" style="-fx-background-color: #9ccc65;">
          <children>
-            <Label layoutX="14.0" prefHeight="37.0" prefWidth="188.0" text="PROJECT - V1" textAlignment="CENTER">
+            <Label layoutX="14.0" prefHeight="37.0" prefWidth="188.0" text="SAMPLE" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="25.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="969.0" prefHeight="37.0" prefWidth="302.0" text="SOUMYA JYOTI GHOSH">
+            <Label alignment="CENTER" layoutX="969.0" prefHeight="37.0" prefWidth="302.0">
                <font>
                   <Font name="Arial Rounded MT Bold" size="25.0" />
                </font>
